--- a/Salse_System_2/Salse_System_2.csproj
+++ b/Salse_System_2/Salse_System_2.csproj
@@ -91,6 +91,12 @@
     <Compile Include="frm_Suppliers.Designer.cs">
       <DependentUpon>frm_Suppliers.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_Update_Qty.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_Update_Qty.Designer.cs">
+      <DependentUpon>frm_Update_Qty.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XtraForm1.cs">
@@ -107,6 +113,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frm_Suppliers.resx">
       <DependentUpon>frm_Suppliers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_Update_Qty.resx">
+      <DependentUpon>frm_Update_Qty.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
