--- a/Salse_System_2/App.config
+++ b/Salse_System_2/App.config
@@ -4,6 +4,9 @@
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System">
       <section name="DevExpress.LookAndFeel.Design.AppSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Salse_System_2.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <applicationSettings>
     <DevExpress.LookAndFeel.Design.AppSettings>
@@ -18,4 +21,17 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
+  <userSettings>
+    <Salse_System_2.Properties.Settings>
+      <setting name="Item_Qty" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="Item_BuyPrice" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="Discount" serializeAs="String">
+        <value>0</value>
+      </setting>
+    </Salse_System_2.Properties.Settings>
+  </userSettings>
 </configuration>
