تظبيط الحقول في شاشة الدفع

--- a/Salse_System_2/App.config
+++ b/Salse_System_2/App.config
@@ -32,6 +32,15 @@
       <setting name="Discount" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="Item_Required" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="Item_Payed" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="Item_Baky" serializeAs="String">
+        <value>0</value>
+      </setting>
     </Salse_System_2.Properties.Settings>
   </userSettings>
 </configuration>
