انهاء حتي الحلقه 154

--- a/Salse_System_2/App.config
+++ b/Salse_System_2/App.config
@@ -32,14 +32,17 @@
       <setting name="Discount" serializeAs="String">
         <value>0</value>
       </setting>
-      <setting name="Item_Required" serializeAs="String">
+      <setting name="Item_Matlob" serializeAs="String">
         <value>1</value>
       </setting>
-      <setting name="Item_Payed" serializeAs="String">
+      <setting name="Item_Madfo3" serializeAs="String">
         <value>0</value>
       </setting>
       <setting name="Item_Baky" serializeAs="String">
         <value>0</value>
+      </setting>
+      <setting name="Is_Eenter" serializeAs="String">
+        <value>True</value>
       </setting>
     </Salse_System_2.Properties.Settings>
   </userSettings>
